@@ -1,6 +1,7 @@
 package com.condusef.resource;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.eclipse.microprofile.graphql.Description;
 import org.eclipse.microprofile.graphql.GraphQLApi;
@@ -10,6 +11,7 @@ import org.eclipse.microprofile.graphql.Query;
 import org.infinispan.client.hotrod.RemoteCache;
 
 import com.condusef.models.CPMexicanoCache;
+import com.condusef.models.Cp;
 import com.condusef.service.CPMexicanoServiceCache;
 
 import io.quarkus.infinispan.client.Remote;
@@ -23,18 +25,16 @@ public class CPMexicanoResourceCache {
 
     @Inject
     @Remote("CpMexicano")
-    RemoteCache<String, CPMexicanoCache> cache;
+    RemoteCache<String, Cp> cache;
 
     @Mutation
     @Description("Add a CPMexicano to the cache")
-    public String addCPMexicanoCache(@Name("key") String key) {
+    public String addCPMexicanoCache2(@Name("key") String key) {
 
         try {
-            List<CPMexicanoCache> cpMexicanoList = service.getAllCPMexicanoCache();
-            if (cpMexicanoList.isEmpty()) {
-                return "la lista esta vacía";
-            }
-            cache.put(key, cpMexicanoList.get(0));
+            Cp cpMexicanoList = service.getAllCPMexicanoCache();
+           
+            cache.put(key, cpMexicanoList);
             return "CPMexicano added to cache";
         } catch (Exception e) {
             e.printStackTrace();
@@ -42,49 +42,68 @@ public class CPMexicanoResourceCache {
         }
 
     }
+
     @Query
-    @Description("Get a CPMexicano from the cache by key")
-    public CPMexicanoCache getCPMexicanoByKey(@Name("key") String key) {
+    @Description("Get all CPMexicano from the cache")
+    public Cp getallCPMexicano(@Name("key") String key) {
         return cache.get(key);
     }
 
     @Query
-    @Description("Get all CPMexicano from the cache")
-    public List<CPMexicanoCache> getAllCPMexicanoCache() {
-        return (List<CPMexicanoCache>) cache.values();
+    @Description("Get CPMexicano by d_codigo")
+    public List<CPMexicanoCache> getCPMexicanoByD_codigo(@Name("key") String key, @Name("d_codigo") String d_codigo) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.stream()
+                .filter(cp -> cp.d_codigo().equals(d_codigo))
+                .collect(Collectors.toList());
+    } 
+    
+    @Query
+    @Description("Get CPMexicano by d_asenta")
+    public List<CPMexicanoCache> getCPMexicanoByD_asenta(@Name("key") String key, @Name("d_asenta") String d_asenta) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.stream()
+                .filter(cp -> cp.d_asenta().equals(d_asenta))
+                .collect(Collectors.toList());
     }
 
     @Query
-    @Description("Get a CPMexicano from the d_codigo")
-    public CPMexicanoCache getCPMexicanoByCodigo(@Name("d_codigo") String d_codigo) {
-        return cache.values().stream().filter(cp -> cp.d_codigo().equals(d_codigo)).findFirst().orElse(null);
+    @Description("Get CPMexicano by d_estado")
+    public List<CPMexicanoCache> getCPMexicanoByD_estado(@Name("key") String key, @Name("d_estado") String d_estado) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.stream()
+                .filter(cp -> cp.d_estado().equals(d_estado))
+                .collect(Collectors.toList());
     }
 
     @Query
-    @Description("Get a CPMexicano from the d_asenta")
-    public List<CPMexicanoCache> getCPMexicanoByAsenta(@Name("d_asenta") String d_asenta) {
-        return cache.values().stream().filter(cp -> cp.d_asenta().equals(d_asenta)).toList();
-    }
-
-
-    @Query
-    @Description("Get a CPMexicano from the D_mnpio")
-    public CPMexicanoCache getCPMexicanoByMnpio(@Name("D_mnpio") String D_mnpio) {
-        return cache.values().stream().filter(cp -> cp.D_mnpio().equals(D_mnpio)).findFirst().orElse(null);
+    @Description("Get CPMexicano by d_ciudad")
+    public List<CPMexicanoCache> getCPMexicanoByD_ciudad(@Name("key") String key, @Name("d_ciudad") String d_ciudad) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.stream()
+                .filter(cp -> cp.d_ciudad().equals(d_ciudad))
+                .collect(Collectors.toList());
     }
 
     @Query
-    @Description("Get a CPMexicano from the d_estado")
-    public List<CPMexicanoCache> getCPMexicanoByEstado(@Name("d_estado") String d_estado) {
-        return cache.values().stream().filter(cp -> cp.d_estado().equals(d_estado)).toList();
+    @Description("Get CPMexicano by D_mnpio")
+    public List<CPMexicanoCache> getCPMexicanoByD_mnpio(@Name("key") String key, @Name("D_mnpio") String D_mnpio) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.stream()
+                .filter(cp -> cp.D_mnpio().equals(D_mnpio))
+                .collect(Collectors.toList());
     }
 
     @Query
-    @Description("Get the size of the cache")
-    public int getCacheSize() {
-        return cache.size();
+    @Description("Get Size of CPMexicanoCache")
+    public int getSizeCPMexicanoCache(@Name("key") String key) {
+        Cp data = cache.get(key);
+        List<CPMexicanoCache> cpMexicanoCacheList = data.cpMexicanoCacheList();
+        return cpMexicanoCacheList.size();
     }
-
-
-
 }
